--- a/views/pages/addEmployee.twig
+++ b/views/pages/addEmployee.twig
@@ -9,73 +9,92 @@
   <section>
    
     <div>
-      <form id="employeeForm" action="/addEmployee" method="post">
+   
+      <form id="employeeForm" action= {{employee ? "/updateEmployee/"~employee.id : "/addEmployee"}} method="post">
        
        <div>
             <img id="trekitLogo" src="/assets/images/trekitWithoutText.png" alt="TrekIT logo">
        </div>
        
        <div id="formTitle">
-            <h2>{{ title }}</h2>
+          <h2>
+            {% if employee %}
+                Modification - Employé
+            {% else %}
+                Inscription - Employé
+            {% endif %}
+          </h2>
         </div>
         <div class="employeeFormInput">
           <label for="firstName">Prénom</label>
-          <input type="text" name="firstName" id="firstName" value="{{ firstName | default('') }}" required>
-          {% if error.firstName %}
+          <input type="text" name="firstName" id="firstName" value="{{ employee.firstName | default('') }}" required>
+          {% if error.firstName %} 
             <p class="error">{{ error.firstName }}</p>
           {% endif %}
         </div>
+
          <div class="employeeFormInput">
           <label for="lastName">Nom</label>
-          <input type="text" name="lastName" id="lastName" value="{{ lastName | default('') }}" required>
+          <input type="text" name="lastName" id="lastName" value="{{ employee.lastName | default('') }}" required>
           {% if error.lastName %}
             <p class="error">{{ error.lastName }}</p>
           {% endif %}
         </div>
-        <div>
-          <label for="dob">Date de Naissance</label>
-          <input type="date" name="dob" id="dob">
-        </div>
-        <div>
-          <label for="gender">Genre</label>
-          <select name="gender" id="gender">
-            <option value="homme">Homme</option>
-            <option value="femme">Femme</option>
-            <option value="autre">Autre</option>
-          </select>
-        </div>
-        <div class="employeeFormInput">
-					<label for="email">Email</label>
-					<input type="email" id="email" name="email">
-					{% if errors.email %}
-						<p>{{errors.email}}</p>
-					{% endif %}
-					{% if duplicateEmail %}
-						<p>{{duplicateEmail}}</p>
-					{% endif %}
 
-				</div>
+       <!-- <div id="opt">
+            <div class="employeeFormInput">
+              <label for="dob">Date de Naissance</label>
+              <input type="date" name="dob" id="dob">
+            </div>
+            
+            <div><p </p></div>
+              <div class="employeeFormInput">
+                <label for="gender">Genre</label>
+                <select name="gender" id="gender">
+                  <option value="homme">Homme</option>
+                  <option value="femme">Femme</option>
+                  <option selected="selected" value="autre">Autre</option>
+                </select>
+              </div>
+         </div> -->
+            <div class="employeeFormInput">
+              <label for="email">Email</label>
+              <input type="email" id="email" name="email" value="{{ employee.email | default('') }}" required>
+              {% if errors.email %}
+                <p>{{errors.email}}</p>
+              {% endif %}
+              {% if duplicateEmail %}
+                <p>{{duplicateEmail}}</p>
+              {% endif %}
+            </div>
         <div class="employeeFormInput">
-          <label for="password">Votre mot de passe</label>
+          <label for="password">Mot de passe</label>
           <input
             type="password"
             name="password"
             id="password"
-            required
+             {% if not employee %} required {% endif %}
+    
             pattern="^(?=.*?[0-9])(?=.*?[A-Za-z]).{6,}$"
             placeholder="6+ caractères, 1 lettre, 1 chiffre"
             autocomplete="current-password"
           >
         </div>
         <div class="employeeFormInput">
-          <label for="confirmPassword">Confirmez votre mot de passe</label>
-          <input type="password" name="confirmPassword" id="confirmPassword" value="{{ confirmPassword | default('') }}" required>
+          <label for="confirmPassword">Confirmer le mot de passe</label>
+          <input type="password" name="confirmPassword" id="confirmPassword" value="{{ confirmPassword | default('') }}"  {% if not employee %} required {% endif %}>
           {% if error.confirmPassword %}
             <p class="error">{{ error.confirmPassword }}</p>
           {% endif %}
         </div>
         <div>
-          <button type="submit" id="addEmployeeSubmit" name="addEmployeeSubmit">Register</button>
+          <button type="submit" id="addEmployeeSubmit" name="addEmployeeSubmit">
+               {% if employee %}
+                Mise à jour
+            {% else %}
+                 Register
+            {% endif %}
+         </button>
         </div>
       </form>
     </div>
