--- a/views/partials/header.twig
+++ b/views/partials/header.twig
@@ -48,7 +48,7 @@
                     <li>
                         <a href="#">Connexion ▾</a>
                         <ul class="servicesList">
-                            <li><a href="/profile">Profile</a></li>
+                            <li><a href="/updateCompany">Profile</a></li>
                             <li><a href="/logout">Logout</a></li>
                         </ul>
                     </li>
