--- a/views/pages/addComputer.twig
+++ b/views/pages/addComputer.twig
@@ -52,7 +52,7 @@
         <div>
           <label for="status">Statut</label>
           <select name="status" id="status" value="{{ computer.status }}">
-            <option value="Usagee">En usage</option>
+            <option value="Usagee">Assigné</option>
             <option value="Réparation">En réparation</option>
             <option value="Disponible">Disponible</option>
             <option value="Retiré">Retiré</option>
