--- a/views/partials/header.twig
+++ b/views/partials/header.twig
@@ -33,6 +33,7 @@
                         <a href="#">💻 Ordinateurs</a>
                         <ul class="servicesList">
                             <li><a href="/addComputer">Ajouter</a></li>
+                            <li><a href="/assignComputer">Attribuer</a></li>
                             <li><a href="/computers">Liste</a></li>
                         </ul>
                     </li>
