--- a/views/pages/listEmployees.twig
+++ b/views/pages/listEmployees.twig
@@ -20,8 +20,8 @@
                     <th>Nom</th>
                     <th>Prénom</th>
                     <th>Email</th>
-                   <!-- <th>DdN</th>
-                    <th>Genre</th>-->
+                    <th>DdN</th>
+                    <th>Genre</th>
                     <th>Ordinateur</th>
                     <th colspan="2">Actions</th>
                 </tr>
@@ -32,8 +32,8 @@
                         <td>{{employee.lastName}}</td>
                         <td>{{employee.firstName}}</td>
                         <td>{{employee.email}}</td>
-                       <!-- <td>{{employee.dob|date("d/m/Y")}}</td>
-                        <td>{{employee.gender}}</td>-->
+                       <td>{{employee.dob|date("d/m/Y")}}</td>
+                        <td>{{employee.gender}}</td>
                         <td>{{employee.computer.id}}</td>
                         <td> 
                             <form method="post" action="/employeeList">
