--- a/views/layouts/base.twig
+++ b/views/layouts/base.twig
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
 
     {% block style %}
         <link rel="stylesheet" href="/assets/css/style.css">
@@ -28,9 +29,10 @@
   </footer>
 
    
+  {% block scripts %}
+      <script src="/assets/scripts/main.js"></script>
+{% endblock %}
+    
   
-    {% block script %}
-    <script src="/assets/scripts/main.js"></script>
-    {% endblock %}
 </body>
 </html>
