--- a/views/pages/dashboard.twig
+++ b/views/pages/dashboard.twig
@@ -1,44 +1,63 @@
 {% extends "/layouts/base.twig" %}
 
 {% block style %}
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <link rel="stylesheet" href="/assets/css/dashboard.css">
 {% endblock %}
 
 {% block main %}
 <main>
+{% set disponible = 0 %}
+{% set assigne = 0 %}
+{% set reparation = 0 %}
+{% set retire = 0 %}
+
   <section>
    
     <div>
        
-       <div>
+        <div>
             <h2>{{ title }} - {{company.companyName}}</h2>
         </div>
-        <div id="wrapper">
-         <div>
-              <div id="employeeTable">
-            <table>
-                <tr>
-                    <th>Ordinateur</th>
-                    <th>MAC</th>
-                    <th>Statut</th>
-                    <th>Employé</th>
-                </tr>
-                {% for computer in company.computers %}     
-                 <article>
-                    <tr class="employeeLine">
-                        <td>{{computer.computerTitle}}</td>
-                        <td>{{computer.addressMac}}</td>
-                        <td>{{computer.status}}</td>
-                        <td>{{computer.employeeId}}</td>
-                    </tr>
-                    </article>
-             {% endfor %}
-            </table>
-        </div>
-         
-         </div>
-          <div>Two</div>
-        </div>
+        <div>
+              <div id="wrapper">
+                  <div id="employeeTable">
+                    <table>
+                      <tr>
+                          <th>Ordinateur</th>
+                          <th>MAC</th>
+                          <th>Statut</th>
+                          <th>Employé</th>
+                      </tr>
+                      {% for computer in company.computers %}     
+                      <article>
+                          <tr class="employeeLine">
+                              <td>{{computer.computerTitle}}</td>
+                              <td>{{computer.addressMac}}</td>
+                              <td>{{computer.status}}</td>
+                              {% if computer.status == "Disponible" %}
+                                  {% set disponible = disponible + 1 %}
+                              {% elseif computer.status == "Assigné"%}
+                                {% set assigne = assigne + 1 %}
+                              {% elseif computer.status == "Réparation"%}
+                                {% set reparation = reparation + 1 %}  
+                              {% elseif computer.status == "Retiré"%}
+                                {% set retire = retire + 1 %} 
+                              {% endif %}
+                              <td>{{computer.employeeId}}</td>
+                          </tr>
+                          </article>
+                      {% endfor %}
+                      </table>
+                  </div>
+              
+                    <div>
+                          <canvas id="myChart" 
+                          data-labels='["Assigné","Réparation","Disponible","Retiré"]' 
+                          data-values='[{{ assigne }},{{ reparation }},{{ disponible }},{{ retire }}]'></canvas>
+                    </div>
+                <div>
+            </div>
     </div>
   </section>
 </main>
