--- a/views/pages/addEmployee.twig
+++ b/views/pages/addEmployee.twig
@@ -68,7 +68,7 @@
               </div>
          </div>
             <div class="employeeFormInput">
-  <label for="password">Votre mot de passe</label>
+  <label for="password">Mot de passe</label>
   <input
     type="password"
     name="password"
@@ -81,7 +81,7 @@
 </div>
 
 <div class="employeeFormInput">
-  <label for="confirmPassword">Confirmez votre mot de passe</label>
+  <label for="confirmPassword">Confirmez mot de passe</label>
   <input
     type="password"
     name="confirmPassword"
