--- a/views/pages/companySubscribe.twig
+++ b/views/pages/companySubscribe.twig
@@ -56,7 +56,7 @@
           <input type="text" name="directorName" id="directorName" value="{{ company.directorName | default('') }}">
         </div>
         <div class="companySubscribeFormInput">
-  <label for="password">Votre mot de passe</label>
+  <label for="password">Mot de passe</label>
   <input
     type="password"
     name="password"
@@ -69,7 +69,7 @@
     </div>
 
     <div class="companySubscribeFormInput">
-      <label for="confirmPassword">Confirmez votre mot de passe</label>
+      <label for="confirmPassword">Confirmez mot de passe</label>
       <input
         type="password"
         name="confirmPassword"
