--- a/views/partials/header.twig
+++ b/views/partials/header.twig
@@ -39,7 +39,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="/repairs">🛠 Réparations</a>
+                        <a href="/showCompanyFaults">🛠 Défauts</a>
                     </li>
                     <li>
                         <a href="/reports">📊 Rapports</a>
